--- a/week 1/01_Basic_HTML_Page.html
+++ b/week 1/01_Basic_HTML_Page.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
+    <!-- this is a H1 heading -->
     <h1>Heading 1</h1>
+
+    <!-- this is a normal paragraph -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </body>
 
