add changes to codebase

--- a/week 1/02_More basics.html
+++ b/week 1/02_More basics.html
@@ -18,11 +18,19 @@
     <!-- creating Italic text -->
     <p>You know <em>Italy</em> is a nice place</p>
 
+    <!-- adding line break here -->
+    <br>
+
+
     <h2>This is second sub-heading</h2>
 
     <!-- creating Underline text -->
     <p>Spelling of <u>festivel</u> is incorrect</p>
 
+    <!-- adding horizontal ruler here -->
+    <hr>
+
+    <p><small>Stay tuned for more info.</small></p>
 </body>
 
 </html>
