add html file download code

--- a/week 1/04_Anchor_tag.html
+++ b/week 1/04_Anchor_tag.html
@@ -23,6 +23,16 @@
         <li><a href="#">Contact</a></li>
     </ul>
 
+    <!-- creating a downlaodable image  -->
+
+    <p>Click on pikachu to download pikachu image</p>
+    <a href="" download=""><img src="./pika-pika.avif" alt="No image loading" width="400px"></a>
+
+    <!-- click on image to download it -->
+
+    <p>Click on nature image to downoad it</p>
+    <a href="" download="nature.png"><img src="https://images.pexels.com/photos/417074/pexels-photo-417074.jpeg"
+            alt="no image received" width="400px"></a>
 
     <h2>Ancient India</h2>
     <p>By 55,000 years ago, the first modern humans, or Homo sapiens, had arrived on the Indian subcontinent from
