--- a/week 1/04_Anchor_tag.html
+++ b/week 1/04_Anchor_tag.html
@@ -20,7 +20,9 @@
     <ul>
         <li><a href="/week 1/01_Basic_HTML_Page.html" target="_blank">Home</a></li>
         <li><a href="/week 1/02_More basics.html" target="_blank">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Dummy link</a></li>
+        <li><a href="mailto:test@gmail.com">Contact via mail</a></li>
+        <li><a href="tel:+9100000000">Contact via phone</a></li>
     </ul>
 
     <!-- creating a downlaodable image  -->
