--- a/week 1/05_Image.html
+++ b/week 1/05_Image.html
@@ -11,15 +11,27 @@
 
     <!-- Image with alt_text, width and title -->
     <img src="https://images.pexels.com/photos/250591/pexels-photo-250591.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-        alt="Pink flowers" width="250px" title="An image of a flower bouquet">
+        alt="Pink flowers" width="120px" title="An image of a flower bouquet">
 
     <!-- Image with hyperlink, on clicking which redirects it to anothr image -->
     <p>click this below image to get redirected to another image</p>
 
     <a href="https://images.pexels.com/photos/1128797/pexels-photo-1128797.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2 tar"
         target="_blank"><img src="https://images.pexels.com/photos/906150/pexels-photo-906150.jpeg"
-            alt="Image not visible" width="300px">
+            alt="Image not visible" width="100px">
     </a>
+
+    <!-- Creating a div -->
+
+    <div>
+        <p
+            style="background-image: url(https://images.pexels.com/photos/2101187/pexels-photo-2101187.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2); ;">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sint modi voluptas omnis unde adipisci
+            perspiciatis soluta earum consequatur ipsa nostrum ad eligendi ipsam, fugiat, nemo eos. Molestias, vel? Non
+            nam assumenda eaque, fugiat odio adipisci beatae odit nihil provident et cupiditate repudiandae amet
+            tempore!
+        </p>
+    </div>
 
 </body>
 
