add the changes

--- a/week 1/06_Tables.html
+++ b/week 1/06_Tables.html
@@ -33,6 +33,7 @@
     </table>
 
     <!-- creating food table -->
+
     <br>
     <table border="2px solid brown">
         <caption>favourite items</caption>
@@ -49,6 +50,8 @@
             <td>North Indian</td>
         </tr>
     </table>
+
+    <!-- creating a table for practice to show gadgets specs -->
 
     <br>
     <table border="2px solid black">
