add basic css intro

--- a/week 1/09_CSS_Intro.html
+++ b/week 1/09_CSS_Intro.html
@@ -13,6 +13,14 @@
         #uniquePara {
             color: wheat;
         }
+
+        button {
+            display: block;
+        }
+
+        p {
+            display: inline;
+        }
     </style>
 </head>
 
@@ -29,6 +37,18 @@
     <p class="classPara" style="text-decoration: underline;">This is another para</p>
 
     <button style="padding: 10px; background-color: darksalmon; cursor: pointer;">Submit!</button>
+
+    <button>This is button</button>
+    <button>This is button</button>
+    <button>This is button</button>
+    <button>This is button</button>
+
+    <P>This is para</P>
+    <P>This is para</P>
+    <P>This is para</P>
+    <P>This is para</P>
+
+    <!-- In next file, we will practice flex box  -->
 
 </body>
 
