--- a/03_JavaScript/04_Shortest_JS_program.html
+++ b/03_JavaScript/04_Shortest_JS_program.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h2>Shortest JS program 😛</h2>
+    <!-- open this html file in browser to see it -->
+    <h2>Check "Sources" tab in brower's developer tools 😛</h2>
 </body>
 
 </html>
